--- a/Project/Makefile
+++ b/Project/Makefile
@@ -1,14 +1,15 @@
 CC = gcc
 CFLAGS = -g -Wall
 FILE = lexicon.c treeManager.c userManager.c fileManager.c
+EXE = lexicon
 
 all : lexicon
 	@echo "--------------------------------------------------------------"
 	@echo "            to execute type: ./lexicon fileName &"
 	@echo "--------------------------------------------------------------"
 
-projetC : 
+lexicon : 
 	gcc $(FILE) $(CFLAGS) -o lexicon
 
 clean :
-	rm $(OBJ_FILES)
+	rm $(OBJ_FILES) lexicon
